--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -26,7 +26,7 @@ jobs:
         name: Build and push
         uses: docker/build-push-action@v5
         with:
-          platforms: [ linux/arm64/v8 ]
+          platforms: linux/arm64/v8
           push: true
           tags: ${{ secrets.DOCKERHUB_USERNAME }}/${{ secrets.REPOSITORY_NAME }}:latest
          
