--- a/Tabi/Properties/launchSettings.json
+++ b/Tabi/Properties/launchSettings.json
@@ -10,16 +10,16 @@
       "dotnetRunMessages": true,
       "applicationUrl": "http://localhost:5153"
     },
-    //"https": {
-    //  "commandName": "Project",
-    //  "launchBrowser": true,
-    //  "launchUrl": "swagger",
-    //  "environmentVariables": {
-    //    "ASPNETCORE_ENVIRONMENT": "Development"
-    //  },
-    //  "dotnetRunMessages": true,
-    //  "applicationUrl": "https://localhost:7123;http://localhost:5153"
-    //},
+    "https": {
+      "commandName": "Project",
+      "launchBrowser": true,
+      "launchUrl": "swagger",
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Development"
+      },
+      "dotnetRunMessages": true,
+      "applicationUrl": "https://localhost:7123;http://localhost:5153"
+    },
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
