--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -20,13 +20,4 @@ jobs:
           username: ${{ secrets.SSH_USERNAME }}
           key: ${{ secrets.SSH_KEY }}
           port: ${{ secrets.SSH_PORT }}
-          script: |
-            #!/bin/bash
-            if [ "$(sudo docker ps -a -q -f name=tabi-server-container)" ]; then
-                sudo docker kill tabi-server-container
-                sudo docker rm tabi-server-container
-                sudo docker rmi tabi-server -f
-            fi
-            cd tabi && git pull
-            sudo docker build -t tabi-server .
-            sudo docker run -d -it -p 8080\:8080 -e \"ConnectionStrings__DefaultConnection\"=\"\$\{TABI_CONNECTION_STRING\}\" --name tabi-server
+          script: ./tabi.tabiupdate.sh
