--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -20,4 +20,4 @@ jobs:
           username: ${{ secrets.SSH_USERNAME }}
           key: ${{ secrets.SSH_KEY }}
           port: ${{ secrets.SSH_PORT }}
-          script: ./tabi/tabiupdate.sh
+          script: cd tabi && ./tabiupdate.sh
