--- a/Tabi/appsettings.json
+++ b/Tabi/appsettings.json
@@ -6,6 +6,9 @@
     }
   },
   "AllowedHosts": "*",
+  "AppSettings": {
+    "Secret": "Que viva el Caquetá y Que viva Venezuela en ese asunto caballero"
+  },
   "ConnectionStrings": {
     "DefaultConnection": "Server=localhost;Database=tabi;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False"
   }
